--- a/000_syllabus/000_syllabus_marketing_research_and_analytics_2025_2.qmd
+++ b/000_syllabus/000_syllabus_marketing_research_and_analytics_2025_2.qmd
@@ -5,7 +5,7 @@ author:
     email: luis.gomezl@unimilitar.edu.co
     affiliations:
       - name: Universidad Militar Nueva Granada
-date: 2025-02-20
+date: 2025-06-24
 date-modified: last-modified
 format:
   html: 
@@ -25,12 +25,12 @@ params:
       end_hour: 15:00
   block:
     value:
-      start_date: 2025-03-24
-      end_date: 2025-05-31
+      start_date: 2025-09-22
+      end_date: 2025-11-29
   schedule:
     value:
       meeting_dates: [3, 5, 6]
-      dates_recess: [2025-04-14, 2025-04-20]
+      dates_recess: [2025-10-06, 2025-10-12]
       start_presentation_hour: 19:00
       end_presentation_hour: 21:00
       start_syllabus_hour: 20:00
@@ -271,6 +271,14 @@ exam <-  tbl_schedule |>
             -   At least 1 member of the group must attend
             -   The meeting will last 10 minutes per group, no more and no less
 
+-   `r format(x = ymd(params$schedule$dates_recess[[1]]), format = "%B %e")`
+
+    -   **Begin Mid-semester break**
+
+-   `r format(x = ymd(params$schedule$dates_recess[[2]]), format = "%B %e")`
+
+    -   **End Mid-semester break**
+
 -   `r format(x = virtual_meeting[[7]], format = "%B %e")`
 
     -   **Describing data**
@@ -306,14 +314,6 @@ exam <-  tbl_schedule |>
             -   Have a headset with a built-in microphone to isolate noise from the environment
 
 ### Segundo corte 30%
-
--   `r format(x = ymd(params$schedule$dates_recess[[1]]), format = "%B %e")`
-
-    -   **Begin Holy Week**
-
--   `r format(x = ymd(params$schedule$dates_recess[[2]]), format = "%B %e")`
-
-    -   **End Holy Week**
 
 -   `r format(x = virtual_meeting[[10]], format = "%B %e")`
 
