cleaning repository for 2025-2 and adding slides session 1 welcome to R

--- a/000_references/marketing_research_and_analytics.bib
+++ b/000_references/marketing_research_and_analytics.bib
@@ -1,123 +1,4 @@
 
-@incollection{oldham_error_2008,
-	address = {New York, NY},
-	title = {The {Error} {Function} erf(x) and {Its} {Complement} erfc(x)},
-	isbn = {978-0-387-48806-6 978-0-387-48807-3},
-	url = {http://link.springer.com/10.1007/978-0-387-48807-3_41},
-	language = {en},
-	urldate = {2023-06-23},
-	booktitle = {An {Atlas} of {Functions}},
-	publisher = {Springer US},
-	author = {Oldham, Keith B. and Myland, Jan C. and Spanier, Jerome},
-	collaborator = {Oldham, Keit and Myland, Jan and Spanier, Jerome},
-	year = {2008},
-	doi = {10.1007/978-0-387-48807-3_41},
-	pages = {405--415},
-}
-
-@book{florescu_handbook_2014,
-	address = {Hoboken, NJ},
-	series = {Wiley handbooks in applied statistics},
-	title = {Handbook of probability},
-	isbn = {978-1-118-59309-7 978-0-470-64727-1},
-	language = {eng},
-	publisher = {Wiley},
-	author = {Florescu, Ionuţ and Tudor, Ciprian A.},
-	year = {2014},
-	annote = {Probability SpaceProbability Measure -- Random Variables : Generalities -- Random Variables : the Discrete Case -- Random Variables : the Continuous Case -- Generating Random Variables -- Random Vectors in Rn -- Characteristic Function -- Moment Generating Function -- Gaussian Random Vectors -- Convergence Types : A.S. Convergence, LP Convergence, Convergence in Probability -- Limit Theorems -- Appendix A: Integration Theory : General Expectations -- Appendix B: Inequalities Involving Random Variables and Their Expectations},
-	annote = {"Published simultaneously in Canada"--Title page verso Literaturverz. S. 445 - 446},
-	file = {Table of Contents PDF:/home/luifrancgom/Zotero/storage/ZRR8XPM8/Florescu and Tudor - 2014 - Handbook of probability.pdf:application/pdf},
-}
-
-@article{hyndman_sample_1996,
-	title = {Sample {Quantiles} in {Statistical} {Packages}},
-	volume = {50},
-	issn = {00031305},
-	url = {https://www.jstor.org/stable/2684934?origin=crossref},
-	doi = {10.2307/2684934},
-	number = {4},
-	urldate = {2023-06-22},
-	journal = {The American Statistician},
-	author = {Hyndman, Rob J. and Fan, Yanan},
-	month = nov,
-	year = {1996},
-	pages = {361},
-}
-
-@misc{posit_pbc_learning_2023,
-	title = {Learning {Python} for {Data} {Science} with {Posit} {Academy} - {YouTube}},
-	url = {https://www.youtube.com/live/IpUhSZPqTaE?feature=share&t=401},
-	urldate = {2023-06-18},
-	author = {Posit PBC},
-	month = may,
-	year = {2023},
-	file = {Learning Python for Data Science with Posit Academy - YouTube:/home/luifrancgom/Zotero/storage/IF2XU2BD/watch.html:text/html},
-}
-
-@book{ismay_statistical_2020,
-	address = {Boca Raton London New York},
-	series = {The {R} series},
-	title = {Statistical inference via data science: a {ModernDive} into {R} and the tidyverse},
-	isbn = {978-0-367-40982-1 978-0-367-40987-6},
-	shorttitle = {Statistical inference via data science},
-	url = {https://moderndive.com/index.html},
-	language = {eng},
-	publisher = {CRC Press, Taylor \& Francis Group},
-	author = {Ismay, Chester and Kim, Albert Young-Sun},
-	year = {2020},
-	annote = {Includes bibliographical references and index},
-	file = {Table of Contents PDF:/home/luifrancgom/Zotero/storage/W3UHFSCB/Ismay and Kim - 2020 - Statistical inference via data science a ModernDi.pdf:application/pdf},
-}
-
-@misc{mckinney_python_2023,
-	title = {Python for {Data} {Analysis}, {3E}},
-	url = {https://wesmckinney.com/book/},
-	language = {en},
-	urldate = {2023-05-15},
-	author = {Mckinney, Wes},
-	year = {2023},
-	file = {Snapshot:/home/luifrancgom/Zotero/storage/2T82R6KV/book.html:text/html},
-}
-
-@book{schwarz_python_2020,
-	address = {Cham, Switzerland},
-	title = {Python for marketing research and analytics},
-	isbn = {978-3-030-49720-0 978-3-030-49719-4},
-	language = {eng},
-	publisher = {Springer},
-	author = {Schwarz, Jason S. and Chapman, Chris and Feit, Elea McDonnell},
-	year = {2020},
-	annote = {Illustrationen, Diagramme Literaturverzeichnis: Seite 265-266},
-}
-
-@misc{wickham_r_2023,
-	title = {R for {Data} {Science} (2e)},
-	url = {https://r4ds.hadley.nz/},
-	urldate = {2023-05-15},
-	author = {Wickham, Hadley and Çetinkaya-Rundel, Mine and Grolemund, Garret},
-	year = {2023},
-	file = {R for Data Science (2e):/home/luifrancgom/Zotero/storage/4TTPUDKB/r4ds.hadley.nz.html:text/html},
-}
-
-@techreport{iregui_guerrero_politica_2018,
-	title = {Política de formación para la investigación, la innovación y el emprendimiento},
-	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
-	urldate = {2023-05-15},
-	institution = {Universidad Militar Nueva Granada},
-	author = {Iregui Guerrero, Marcela and Cuevas Silva, Juan María},
-	year = {2018},
-	doi = {10.18359/whitepaper.3750},
-	file = {Full Text:/home/luifrancgom/Zotero/storage/Z2MHTXZC/Iregui Guerrero and Cuevas Silva - 2018 - Política de formación para la investigación, la in.pdf:application/pdf},
-}
-
-@misc{consejo_nacional_de_acreditacion_lineamientos_2021,
-	title = {Lineamientos y aspectos por evaluar para la acreditación en alta calidad de las instituciones de educación superior},
-	url = {https://www.cna.gov.co/1779/w3-article-404965.html?_noredirect=1},
-	author = {Consejo Nacional de Acreditación},
-	month = mar,
-	year = {2021},
-}
-
 @misc{mcadoo_how_2024,
 	title = {How to cite {ChatGPT}},
 	url = {https://apastyle.apa.org/blog/how-to-cite-chatgpt},
@@ -165,7 +46,7 @@
 	annote = {Previous edition: 2017 Includes index},
 }
 
-@book{wickham_r_2023-1,
+@book{wickham_r_2023,
 	address = {Beijing ; Sebastopol, CA},
 	edition = {Second edition},
 	title = {R for data science: import, tidy, transform, visualize, and model data},
@@ -176,10 +57,10 @@
 	author = {Wickham, Hadley and Çetinkaya-Rundel, Mine and Grolemund, Garrett},
 	year = {2023},
 	note = {OCLC: on1390607935},
-	keywords = {Statistics, Information visualization, Computer programs, R (Computer program language), Data mining, Big data, Electronic data processing, R (Langage de programmation), Exploration de données (Informatique), Données volumineuses, Logiciels, Visualisation de l'information},
+	keywords = {R (Computer program language), R (Langage de programmation), Big data, Computer programs, Data mining, Electronic data processing, Information visualization, Statistics, Exploration de données (Informatique), Données volumineuses, Logiciels, Visualisation de l'information},
 }
 
-@book{schwarz_python_2020-1,
+@book{schwarz_python_2020,
 	address = {Cham},
 	title = {Python for {Marketing} {Research} and {Analytics}},
 	copyright = {http://www.springer.com/tdm},
@@ -191,7 +72,7 @@
 	author = {Schwarz, Jason S. and Chapman, Chris and Feit, Elea McDonnell},
 	year = {2020},
 	doi = {10.1007/978-3-030-49720-0},
-	file = {Submitted Version:/home/luifrancgom/Zotero/storage/YQZ6Z3JX/Schwarz et al. - 2020 - Python for Marketing Research and Analytics.pdf:application/pdf},
+	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\YQZ6Z3JX\\Schwarz et al. - 2020 - Python for Marketing Research and Analytics.pdf:application/pdf},
 }
 
 @book{chapman_r_2019,
@@ -215,7 +96,7 @@
 	year = {2021},
 }
 
-@techreport{iregui_guerrero_politica_2018-1,
+@techreport{iregui_guerrero_politica_2018,
 	title = {Política de formación para la investigación, la innovación y el emprendimiento},
 	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
 	urldate = {2024-06-18},
@@ -223,7 +104,7 @@
 	author = {Iregui Guerrero, Marcela and Cuevas Silva, Juan María},
 	year = {2018},
 	doi = {10.18359/whitepaper.3750},
-	file = {Full Text:/home/luifrancgom/Zotero/storage/HQMJHVH6/Iregui Guerrero and Cuevas Silva - 2018 - Política de formación para la investigación, la in.pdf:application/pdf},
+	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\HQMJHVH6\\Iregui Guerrero and Cuevas Silva - 2018 - Política de formación para la investigación, la in.pdf:application/pdf},
 }
 
 @article{stevens_theory_1946,
@@ -271,7 +152,7 @@
 	author = {Deza, Michel Marie and Deza, Elena},
 	year = {2016},
 	doi = {10.1007/978-3-662-52844-0},
-	file = {Submitted Version:/home/luifrancgom/Zotero/storage/JJW8FH4S/Deza and Deza - 2016 - Encyclopedia of Distances.pdf:application/pdf},
+	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\JJW8FH4S\\Deza and Deza - 2016 - Encyclopedia of Distances.pdf:application/pdf},
 }
 
 @book{greenacre_biplots_2010,
@@ -284,7 +165,7 @@
 	author = {Greenacre, Michael J.},
 	year = {2010},
 	annote = {Literaturverz. S. 199 - 203},
-	file = {Table of Contents PDF:/home/luifrancgom/Zotero/storage/I5CJZALZ/Greenacre - 2010 - Biplots in practice.pdf:application/pdf},
+	file = {Table of Contents PDF:C\:\\Users\\Usuario\\Zotero\\storage\\I5CJZALZ\\Greenacre - 2010 - Biplots in practice.pdf:application/pdf},
 }
 
 @book{greene_econometric_2018,
@@ -311,7 +192,7 @@
 	month = feb,
 	year = {1978},
 	pages = {17},
-	file = {Submitted Version:/home/luifrancgom/Zotero/storage/V5K4X2VI/Hoaglin and Welsch - 1978 - The Hat Matrix in Regression and ANOVA.pdf:application/pdf},
+	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\V5K4X2VI\\Hoaglin and Welsch - 1978 - The Hat Matrix in Regression and ANOVA.pdf:application/pdf},
 }
 
 @book{blom_statistical_1958,
@@ -359,4 +240,157 @@
 	author = {Rice, John A.},
 	year = {2021},
 	note = {OCLC: 1267963934},
+}
+
+@incollection{oldham_error_2008,
+	address = {New York, NY},
+	title = {The {Error} {Function} erf(x) and {Its} {Complement} erfc(x)},
+	isbn = {978-0-387-48806-6 978-0-387-48807-3},
+	url = {http://link.springer.com/10.1007/978-0-387-48807-3_41},
+	language = {en},
+	urldate = {2023-06-23},
+	booktitle = {An {Atlas} of {Functions}},
+	publisher = {Springer US},
+	author = {Oldham, Keith B. and Myland, Jan C. and Spanier, Jerome},
+	collaborator = {Oldham, Keit and Myland, Jan and Spanier, Jerome},
+	year = {2008},
+	doi = {10.1007/978-0-387-48807-3_41},
+	pages = {405--415},
+}
+
+@book{florescu_handbook_2014,
+	address = {Hoboken, NJ},
+	series = {Wiley handbooks in applied statistics},
+	title = {Handbook of probability},
+	isbn = {978-1-118-59309-7 978-0-470-64727-1},
+	language = {eng},
+	publisher = {Wiley},
+	author = {Florescu, Ionuţ and Tudor, Ciprian A.},
+	year = {2014},
+	annote = {Probability SpaceProbability Measure -- Random Variables : Generalities -- Random Variables : the Discrete Case -- Random Variables : the Continuous Case -- Generating Random Variables -- Random Vectors in Rn -- Characteristic Function -- Moment Generating Function -- Gaussian Random Vectors -- Convergence Types : A.S. Convergence, LP Convergence, Convergence in Probability -- Limit Theorems -- Appendix A: Integration Theory : General Expectations -- Appendix B: Inequalities Involving Random Variables and Their Expectations},
+	annote = {"Published simultaneously in Canada"--Title page verso Literaturverz. S. 445 - 446},
+	file = {Table of Contents PDF:C\:\\Users\\Usuario\\Zotero\\storage\\ZRR8XPM8\\Florescu and Tudor - 2014 - Handbook of probability.pdf:application/pdf},
+}
+
+@article{hyndman_sample_1996,
+	title = {Sample {Quantiles} in {Statistical} {Packages}},
+	volume = {50},
+	issn = {00031305},
+	url = {https://www.jstor.org/stable/2684934?origin=crossref},
+	doi = {10.2307/2684934},
+	number = {4},
+	urldate = {2023-06-22},
+	journal = {The American Statistician},
+	author = {Hyndman, Rob J. and Fan, Yanan},
+	month = nov,
+	year = {1996},
+	pages = {361},
+}
+
+@misc{posit_pbc_learning_2023,
+	title = {Learning {Python} for {Data} {Science} with {Posit} {Academy} - {YouTube}},
+	url = {https://www.youtube.com/live/IpUhSZPqTaE?feature=share&t=401},
+	urldate = {2023-06-18},
+	author = {Posit PBC},
+	month = may,
+	year = {2023},
+	file = {Learning Python for Data Science with Posit Academy - YouTube:C\:\\Users\\Usuario\\Zotero\\storage\\IF2XU2BD\\watch.html:text/html},
+}
+
+@book{ismay_statistical_2020,
+	address = {Boca Raton London New York},
+	series = {The {R} series},
+	title = {Statistical inference via data science: a {ModernDive} into {R} and the tidyverse},
+	isbn = {978-0-367-40982-1 978-0-367-40987-6},
+	shorttitle = {Statistical inference via data science},
+	url = {https://moderndive.com/index.html},
+	language = {eng},
+	publisher = {CRC Press, Taylor \& Francis Group},
+	author = {Ismay, Chester and Kim, Albert Young-Sun},
+	year = {2020},
+	annote = {Includes bibliographical references and index},
+	file = {Table of Contents PDF:C\:\\Users\\Usuario\\Zotero\\storage\\W3UHFSCB\\Ismay and Kim - 2020 - Statistical inference via data science a ModernDi.pdf:application/pdf},
+}
+
+@techreport{iregui_guerrero_politica_2018-1,
+	title = {Política de formación para la investigación, la innovación y el emprendimiento},
+	url = {https://revistas.unimilitar.edu.co/index.php/wpapers/article/view/3750},
+	urldate = {2023-05-15},
+	institution = {Universidad Militar Nueva Granada},
+	author = {Iregui Guerrero, Marcela and Cuevas Silva, Juan María},
+	year = {2018},
+	doi = {10.18359/whitepaper.3750},
+	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\Z2MHTXZC\\Iregui Guerrero and Cuevas Silva - 2018 - Política de formación para la investigación, la in.pdf:application/pdf},
+}
+
+@misc{consejo_nacional_de_acreditacion_lineamientos_2021,
+	title = {Lineamientos y aspectos por evaluar para la acreditación en alta calidad de las instituciones de educación superior},
+	url = {https://www.cna.gov.co/1779/w3-article-404965.html?_noredirect=1},
+	author = {Consejo Nacional de Acreditación},
+	month = mar,
+	year = {2021},
+}
+
+@misc{dancho_sweep_2017,
+	title = {sweep: {Tidy} {Tools} for {Forecasting}},
+	shorttitle = {sweep},
+	url = {https://CRAN.R-project.org/package=sweep},
+	doi = {10.32614/CRAN.package.sweep},
+	abstract = {Tidies up the forecasting modeling and prediction work flow,  extends the 'broom' package  with 'sw\_tidy', 'sw\_glance', 'sw\_augment', and 'sw\_tidy\_decomp' functions  for various forecasting models, and enables converting 'forecast' objects to  "tidy" data frames with 'sw\_sweep'.},
+	language = {en},
+	urldate = {2025-09-03},
+	author = {Dancho, Matt and Vaughan, Davis},
+	month = jul,
+	year = {2017},
+	note = {Institution: Comprehensive R Archive Network
+Pages: 0.2.6},
+}
+
+@article{wickham_welcome_2019,
+	title = {Welcome to the {Tidyverse}},
+	volume = {4},
+	copyright = {http://creativecommons.org/licenses/by/4.0/},
+	issn = {2475-9066},
+	url = {https://joss.theoj.org/papers/10.21105/joss.01686},
+	doi = {10.21105/joss.01686},
+	number = {43},
+	urldate = {2025-09-03},
+	journal = {Journal of Open Source Software},
+	author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, Lucy and François, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas and Miller, Evan and Bache, Stephan and Müller, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
+	month = nov,
+	year = {2019},
+	pages = {1686},
+	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\7D9GXMG6\\Wickham et al. - 2019 - Welcome to the Tidyverse.pdf:application/pdf},
+}
+
+@article{wickham_welcome_2019-1,
+	title = {Welcome to the {Tidyverse}},
+	volume = {4},
+	copyright = {http://creativecommons.org/licenses/by/4.0/},
+	issn = {2475-9066},
+	url = {https://joss.theoj.org/papers/10.21105/joss.01686},
+	doi = {10.21105/joss.01686},
+	number = {43},
+	urldate = {2025-09-03},
+	journal = {Journal of Open Source Software},
+	author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, Lucy and François, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas and Miller, Evan and Bache, Stephan and Müller, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
+	month = nov,
+	year = {2019},
+	pages = {1686},
+	file = {Full Text:C\:\\Users\\Usuario\\Zotero\\storage\\EY2FZ7FF\\Wickham et al. - 2019 - Welcome to the Tidyverse.pdf:application/pdf},
+}
+
+@book{ismay_statistical_2025,
+	address = {Boca Raton},
+	edition = {2},
+	title = {Statistical {Inference} via {Data} {Science}: {A} {ModernDive} into {R} and the {Tidyverse}},
+	isbn = {978-1-032-72454-6},
+	shorttitle = {Statistical {Inference} via {Data} {Science}},
+	url = {https://moderndive.com/v2/},
+	language = {en},
+	urldate = {2025-09-10},
+	publisher = {Chapman and Hall/CRC},
+	author = {Ismay, Chester and Kim, Albert Y. and Valdivia, Arturo},
+	month = mar,
+	year = {2025},
 }
