updating specific instrucctions marketing report 1

--- a/000_specific_instructions/001_specific_instructions_marketing_report_part_1.qmd
+++ b/000_specific_instructions/001_specific_instructions_marketing_report_part_1.qmd
@@ -10,7 +10,7 @@ format:
     embed-resources: true
     css: ../000_css/styles.css
 bibliography: ../000_references/marketing_research_and_analytics.bib
-editor: visual
+editor: source
 ---
 
 # Business Case
