--- a/000_templates/002_marketing_report_part-2.qmd
+++ b/000_templates/002_marketing_report_part-2.qmd
@@ -10,7 +10,7 @@ format:
     code-fold: true
     number-sections: true
     embed-resources: true
-editor: visual
+editor: source
 ---
 
 ```{r }
@@ -33,13 +33,15 @@ library(sweep)
 
 # Exploring data, visualizing it and applying statistical tests
 
+**Please clean all the instructions** in the different sections of the template including this text and add the necessary text to present the report.
+
 ## Introduction
 
 Once your group has finish filling all the sections, add some text here describing the principal findings. Be straightforward and concise taking into account that it is an executive report.
 
 ## Import data
 
-Add some text if your group consider to be necessary.
+Add some text related to importing the data.
 
 ```{r}
 # Import the data from the sweep package
