fixing size equation

--- a/000_slides_R/006_comparing_groups_statistical_tests_html.qmd
+++ b/000_slides_R/006_comparing_groups_statistical_tests_html.qmd
@@ -486,7 +486,7 @@ segmentation |>
                shape = 21, fill = '#E31A1C', color = 'black')
 ```
 
-##
+## {.smaller}
 
 -   Testing Multiple Group Means: Analysis of Variance (ANOVA)
 
